Adapted paths and chapter titles in ersti.tex

--- a/ersti.tex
+++ b/ersti.tex
@@ -31,86 +31,57 @@
     }%
 }
 
-\chapter{Hallo und herzlich willkommen}
-% \input{vorwort}
+\chapter{Welcome to Heidelberg!}
+% \input{introduction}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Vorkurs}
-% \input{zu_aktualisieren/vorkursplan.mathe}
-% \input{zu_aktualisieren/vorkursplan.info}
-% \input{zu_aktualisieren/vorkursplan.physik}
-% \input{zu_aktualisieren/vorkursplan.alle}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Studiengänge}
-% \input{studiengaenge/bachelor_allgemein}
-% \input{studiengaenge/bachelor_informatik}
-% \input{studiengaenge/bachelor_mathe}
-% \input{studiengaenge/bachelor_physik}
-% \input{studiengaenge/lehramt_allgemein}
-% \input{studiengaenge/lehramt_info}
-% \input{studiengaenge/lehramt_mathe}
-% \input{studiengaenge/lehramt_physik}
-% \input{studiengaenge/lehramt_kontakte}
+% \chapter{Study programs}
+% \input{studiengaenge/master_physik}
+% \input{studiengaenge/master_mathe}
+% \input{studiengaenge/master_angewandte_informatik}
+% \input{studiengaenge/master_technische_informatik}
+% \input{studiengaenge/master_scientific_computing}
+% \input{studiengaenge/master_education}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Studieren -- Wie geht das?}
-% \input{wie-geht-studium/vorlesung_allgemein}
-% \input{wie-geht-studium/vorlesungen_info}
-% \input{wie-geht-studium/vorlesungen_mathe}
-% \input{wie-geht-studium/vorlesungen_physik}
-% \input{wie-geht-studium/durchgefallen}
-% \input{wie-geht-studium/uebungsgruppen_allgemein}
-% \input{wie-geht-studium/praktikum}
-% \input{wie-geht-studium/seminar}
-% \input{wie-geht-studium/lehrbuecher}
-% \input{wie-geht-studium/medienplattformen_mathe}
-% \input{wie-geht-studium/faq_physik}
+\chapter{Studying in Germany 101}
+% \input{studying-101/course_types}
+% \input{studying-101/points_and_grading}
+% \input{studying-101/legal_side}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Was tun bei Problemen?}
-% \input{probleme/einleitung}
-% \input{probleme/career_service}
-% \input{probleme/kummerkasten}
-% \input{probleme/nightline}
-% \input{probleme/handicap}
+\chapter{Getting Help}
+% \input{getting-help/international_office}
+% \input{getting-help/tuition}
+% \input{getting-help/professional_advice}
+% \input{getting-help/nightline}
+% \input{getting-help/handicap}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{An der Uni \dots}
-% \input{an-der-uni/edv}
-% \input{an-der-uni/bibliotheken}
-% \input{an-der-uni/arbeitsraum}
-% \input{an-der-uni/bafoeg}
-% \input{an-der-uni/ausland}
-% \input{an-der-uni/weitere}
+\chapter{At the University \dots}
+% \input{at-the-university/canteen}
+% \input{at-the-university/edv}
+% \input{at-the-university/libraries}
+% \input{an-der-uni/going_abroad}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{\dots und in der Stadt}
-% \input{in-der-stadt/wohnung}
-% \input{in-der-stadt/kneipen}
-% \input{in-der-stadt/kultur}
-% \input{in-der-stadt/verkehrsmittel}
-% \input{in-der-stadt/hochschulsport}
+\chapter{\dots and in Town}
+% \input{in-town/living}
+% \input{in-town/going_out}
+% \input{in-town/culture}
+% \input{in-town/transport}
+% \input{in-town/sports}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Hochschulpolitik}
-% \input{hopo/ueberblick_gremien}
-% \input{hopo/studiengebuehren}
-% \input{hopo/semesterticket}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Die Fachschaft MathPhysInfo}
-% \label{diefsmathphys}
-% \input{mathphys/fachschaft}
-% \input{mathphys/arbeitsweise}
-% \input{mathphys/informatik_vollversammlung}
-% \input{mathphys/vorkursteam}
-%\input{mathphys/akfest}
+\chapter{Student Council}
+% \input{mathphys/fachschaft_whats_that}
+% \input{mathphys/what_we_do_for_you}
 % \input{mathphys/evaluation}
+% \input{mathphys/university_politics}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Kontakte und Ansprechpartner}
-% \input{ansprechpartner}
+\chapter{Contact Persons}
+% \input{contact_persons}
 
 \makeevenhead{plain}{}{}{}
 \makeoddhead{plain}{}{}{}
